// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`screen: Nav/ActionBar displays network 1`] = `
<div
  className="makeStyles-root"
>
  <div
    className="makeStyles-actions"
  >
    <form
      className="makeStyles-searchBar open makeStyles-root"
      onSubmit={[Function]}
    >
      <div
        className="MuiInputBase-root MuiInputBase-adornedStart"
        onClick={[Function]}
      >
        <div
          className="MuiInputAdornment-root MuiInputAdornment-positionStart"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
            color="#999999"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
        </div>
        <input
          aria-label="searchBarPlaceholderDtag"
          className="MuiInputBase-input MuiInputBase-inputAdornedStart"
          onAnimationStart={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder="searchBarPlaceholderDtag"
          type="text"
          value=""
        />
      </div>
    </form>
    <div
      className="makeStyles-network open"
      id="network"
      toggleNetwork={[MockFunction]}
    />
    <div>
      <div
        aria-label="wallet-details-button"
        className=""
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="makeStyles-avatar makeStyles-root"
        >
          <svg
            data-jdenticon-value=""
            height="100%"
            width="100%"
          />
        </div>
      </div>
      <div
        className="makeStyles-networkList makeStyles-root makeStyles-root"
      >
        <div
          className="makeStyles-walletDetails"
        >
          <div
            className="makeStyles-walletInfo"
          >
            <div
              className="makeStyles-walletAvatar"
            >
              <div
                className="makeStyles-avatar makeStyles-root"
              >
                <svg
                  data-jdenticon-value="desmos13yp2fq3tslq6mmtq4628q38xzj75ethzela9uu"
                  height="100%"
                  width="100%"
                />
              </div>
              <div
                className="makeStyles-whiteDot"
              />
              <div
                className="makeStyles-greenDot"
              />
            </div>
            <div
              className="makeStyles-walletLabel"
            >
              Wallet 3
              <div>
                <span
                  className="MuiTypography-root makeStyles-walletAddress MuiTypography-caption"
                >
                  desmos13y...9uu
                </span>
                <svg
                  className="makeStyles-copyIcon"
                  onClick={[Function]}
                />
              </div>
            </div>
          </div>
          <hr
            className="MuiDivider-root makeStyles-divider"
          />
          <div
            aria-label="account-details-button"
            className="makeStyles-accountDetailsButton"
            onClick={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="makeStyles-accountDetailsLabel"
            >
              <div
                className="makeStyles-blackDot"
              />
              <div
                className="makeStyles-accountDetails"
              >
                accountDetails
              </div>
            </div>
          </div>
        </div>
        <div
          aria-label="change-wallet-button"
          className="makeStyles-changeWalletButton"
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="makeStyles-changeWalletButtonLabel"
          >
            changeWallet
          </div>
        </div>
        <hr
          className="MuiDivider-root makeStyles-bottomDivider"
        />
        <div
          className="makeStyles-signOut"
        >
          <div
            aria-label="sign-out-button"
            className="makeStyles-signOutButton"
            onClick={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="makeStyles-signOutLabel"
            >
              <svg
                className="makeStyles-signOutIcon"
                onClick={[Function]}
              />
              <div
                className="makeStyles-signOutText"
              >
                signOut
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      id="SettingsList"
    />
    <div>
      <div
        aria-label="connect-wallet-button"
        className="makeStyles-icon"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <svg />
      </div>
    </div>
  </div>
  <div
    actionHeight={0}
    className="makeStyles-networkList open"
    id="NetworkList"
  />
</div>
`;

exports[`screen: Nav/ActionBar it renders 1`] = `
<div
  className="makeStyles-root"
>
  <div
    className="makeStyles-actions"
  >
    <form
      className="makeStyles-searchBar makeStyles-root"
      onSubmit={[Function]}
    >
      <div
        className="MuiInputBase-root MuiInputBase-adornedStart"
        onClick={[Function]}
      >
        <div
          className="MuiInputAdornment-root MuiInputAdornment-positionStart"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
            color="#999999"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
        </div>
        <input
          aria-label="searchBarPlaceholderDtag"
          className="MuiInputBase-input MuiInputBase-inputAdornedStart"
          onAnimationStart={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder="searchBarPlaceholderDtag"
          type="text"
          value=""
        />
      </div>
    </form>
    <div
      className="makeStyles-network"
      id="network"
      toggleNetwork={[MockFunction]}
    />
    <div>
      <div
        aria-label="wallet-details-button"
        className=""
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="makeStyles-avatar makeStyles-root"
        >
          <svg
            data-jdenticon-value=""
            height="100%"
            width="100%"
          />
        </div>
      </div>
      <div
        className="makeStyles-networkList makeStyles-root makeStyles-root"
      >
        <div
          className="makeStyles-walletDetails"
        >
          <div
            className="makeStyles-walletInfo"
          >
            <div
              className="makeStyles-walletAvatar"
            >
              <div
                className="makeStyles-avatar makeStyles-root"
              >
                <svg
                  data-jdenticon-value="desmos13yp2fq3tslq6mmtq4628q38xzj75ethzela9uu"
                  height="100%"
                  width="100%"
                />
              </div>
              <div
                className="makeStyles-whiteDot"
              />
              <div
                className="makeStyles-greenDot"
              />
            </div>
            <div
              className="makeStyles-walletLabel"
            >
              Wallet 3
              <div>
                <span
                  className="MuiTypography-root makeStyles-walletAddress MuiTypography-caption"
                >
                  desmos13y...9uu
                </span>
                <svg
                  className="makeStyles-copyIcon"
                  onClick={[Function]}
                />
              </div>
            </div>
          </div>
          <hr
            className="MuiDivider-root makeStyles-divider"
          />
          <div
            aria-label="account-details-button"
            className="makeStyles-accountDetailsButton"
            onClick={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="makeStyles-accountDetailsLabel"
            >
              <div
                className="makeStyles-blackDot"
              />
              <div
                className="makeStyles-accountDetails"
              >
                accountDetails
              </div>
            </div>
          </div>
        </div>
        <div
          aria-label="change-wallet-button"
          className="makeStyles-changeWalletButton"
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="makeStyles-changeWalletButtonLabel"
          >
            changeWallet
          </div>
        </div>
        <hr
          className="MuiDivider-root makeStyles-bottomDivider"
        />
        <div
          className="makeStyles-signOut"
        >
          <div
            aria-label="sign-out-button"
            className="makeStyles-signOutButton"
            onClick={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="makeStyles-signOutLabel"
            >
              <svg
                className="makeStyles-signOutIcon"
                onClick={[Function]}
              />
              <div
                className="makeStyles-signOutText"
              >
                signOut
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      id="SettingsList"
    />
    <div>
      <div
        aria-label="connect-wallet-button"
        className="makeStyles-icon"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <svg />
      </div>
    </div>
  </div>
  <div
    actionHeight={0}
    className="makeStyles-networkList"
    id="NetworkList"
  />
</div>
`;
